--- a/less/intro.less
+++ b/less/intro.less
@@ -18,7 +18,7 @@
         font-weight: 600;
     }
     .about-us-button {
-        // visibility: hidden;
+        display: none;
         margin-top: 2rem;
         width: 100%;
         padding: .5rem 0;
@@ -54,6 +54,6 @@
     }
 
     .about-us-button{
-        visibility: visible;
+        display: block !important;
     }
 }
